--- a/src/style.scss
+++ b/src/style.scss
@@ -1,29 +1,19 @@
-html,
-body,
-ul,
-h1 {
-  margin: 0;
-  padding: 0;
-  font-family: Arial;
-}
+$main-color: #689f38;
+$second-color: #f1f8e9;
 
 .header {
-  background-color: #689f38;
+  background-color: $main-color;
   color: #f5f5f5;
+  .title {
+    padding: 1rem;
+  }
 }
-
-.header .title {
-  padding: 1rem;
-}
-
 .blog {
   display: flex;
+  .list {
+    padding-right: 1rem;
+  }
 }
-
-.blog .list {
-  padding-right: 1rem;
-}
-
 .blog .list .title {
   max-width: 33vw;
   overflow: hidden;
@@ -38,7 +28,7 @@ h1 {
 }
 
 .blog .list .title:nth-of-type(2n) {
-  background-color: #f1f8e9;
+  background-color: $second-color;
 }
 
 .blog .list .title:hover {
@@ -55,14 +45,14 @@ h1 {
 }
 
 .blog .post .author {
-  border: 1px dotted #689f38;
+  border: 1px dotted $main-color;
   padding: 0 2rem;
-  background-color: #f1f8e9;
+  background-color: $second-color;
 }
 
 .blog .post .comments .comment {
   border: 1px dotted;
-  background-color: #f1f8e9;
+  background-color: $second-color;
   padding: 0 1rem 0 2rem;
   margin-bottom: 1rem;
 }
@@ -79,9 +69,9 @@ h1 {
   font-size: 10px;
   position: relative;
   text-indent: -9999em;
-  border-top: 1.1em solid rgba(104,159,56, 0.2);
-  border-right: 1.1em solid rgba(104,159,56, 0.2);
-  border-bottom: 1.1em solid rgba(104,159,56, 0.2);
+  border-top: 1.1em solid rgba(104, 159, 56, 0.2);
+  border-right: 1.1em solid rgba(104, 159, 56, 0.2);
+  border-bottom: 1.1em solid rgba(104, 159, 56, 0.2);
   border-left: 1.1em solid #689f38;
   transform: translateZ(0);
   animation: loading 1.1s infinite linear;
@@ -95,4 +85,3 @@ h1 {
     transform: rotate(360deg);
   }
 }
-
