--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,20 @@
 $main-color: #689f38;
 $second-color: #f1f8e9;
 
+@mixin ellipsis() {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+html,
+body,
+ul,
+h1 {
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+}
 .header {
   background-color: $main-color;
   color: #f5f5f5;
@@ -16,15 +30,13 @@ $second-color: #f1f8e9;
 }
 .blog .list .title {
   max-width: 33vw;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   font-size: 1.6180339rem;
   line-height: 2.71828rem;
   padding-left: 1rem;
   border: 1px transparent;
   flex-shrink: 0;
   flex-basis: 33vw;
+  @include ellipsis;
 }
 
 .blog .list .title:nth-of-type(2n) {
